v0.6.1
* minor fixes
  * EncryptionHandler.getKeys is now a static method
  * EncryptionHandler.keysSet changed to EncryptionHandler.keysInitiated
  * added more clarity to ValidationFailedException
    * added messages to all throws
  * fixed one instance where require was not used and should have been
  * precision updated for LMath.cubeRoot()
  * removed unused class Partitioner
* updated readme
* added Serializable where appropriate, though exporting to JSON is more compact

v0.6.0
* minor fixes and improvements
  * added modal frame
  * moved RegisterFrame to gui.customswing
  * removed anonymous functions
* overhaul password system
  * separated encryption handling and password gui
  * implemented logout
  * implemented password change
  * implemented specific password for archives
  * added gui for un-assumed password
    * added option for using profile password
* reworked import and export
  * removed export from profile flags
  * added import modes
  * added .xtbl option to import
    * password not assumed
    * added support for .xarc
  * added import gui
  * added export gui

v0.5.5
* rearranged fields in defaults
* proofread changelog
* removed "mili" and replaced with "milli"
* fixed factor in currency.json

v0.5.4
* de-generified entries for better memory handling
  * data is now stored as fields rather than in array of generic objects
  * Entry made abstract
  * removed header object
  * removed field object
    * it was decided that entries no longer required flexibility of this kind.
* removed unused LTypes
  * removed LString, LInt, LDecimal, LJson
  * removed LType and replaced with interface calls
* removed ToolBox
* changed ExportableToJsonObject to ExportableToJson
* added entry imports to Examples
  * added transaction import
    * added metadata
  * added budget import

v0.5.3
* updated to java 18
* updated readme
* minor bug fixes
* JsonObject optimized
* optimized memory usage by replacing hashmap with arraylist in Entry and Header
