@@ -38,7 +38,7 @@ public class AssetChangeMetadata {
 
     public JsonObject export() throws JsonFormattingException {
         JsonObject obj = new JsonObject();
-        obj.put("date", new JsonDecimal(BigDecimal.valueOf(DATE.getTime())));
+        obj.put("date", DATE.export());
         obj.put("name", new JsonString(NAME));
         obj.put("currency", new JsonString(CURRENCY.getTicker()));
         obj.put("change", new JsonDecimal(CHANGE));
