@@ -95,7 +95,7 @@ public class AssetMetadata {
 
     public JsonObject export() throws JsonFormattingException {
         JsonObject obj = new JsonObject();
-        obj.put("date", new JsonDecimal(BigDecimal.valueOf(DATE.getTime())));
+        obj.put("date", DATE.export());
         obj.put("name", new JsonString(NAME));
         obj.put("desc", new JsonString(DESC));
         obj.put("currency", new JsonString(CURRENCY.toString()));
