@@ -1,11 +1,14 @@
 package com.donny.dendrofinance.entry.totals;
 
 import com.donny.dendrofinance.currency.LCurrency;
+import com.donny.dendrofinance.json.JsonFormattingException;
+import com.donny.dendrofinance.json.JsonItem;
 import com.donny.dendrofinance.types.LDate;
+import com.donny.dendrofinance.util.ExportableToJson;
 
 import java.math.BigDecimal;
 
-public class PositionElement {
+public class PositionElement implements ExportableToJson {
     public final LDate DATE;
     public final long UUID;
     public final BigDecimal UNIT;
@@ -33,5 +36,10 @@ public class PositionElement {
     @Override
     public String toString() {
         return "{" + UUID + "} \\ (" + DATE + ") \\ volume=" + volume + ", cost=" + volume.multiply(UNIT) + ", unit=" + UNIT;
+    }
+
+    @Override
+    public JsonItem export() throws JsonFormattingException {
+        return null;
     }
 }
